# physarum-rs

./: Cargo.toml  README.md
.github/workflows/: lint-test.yml
assets/shaders/: deposit.wgsl  diffusion.wgsl  move.wgsl  setter.wgsl
shaders/: deposit.wgsl  diffusion.wgsl  move.wgsl  setter.wgsl
src/: main.rs  points_basematrix.rs
src/shaders/: deposit.wgsl
src/simulation/: components.rs  constants.rs  mod.rs  plugin.rs  render.rs  resources.rs  systems.rs  utils.rs
src/simulation/resources/: main.rs  mod.rs  render.rs
src/simulation/systems/: main.rs  render.rs
